--- a/123.css
+++ b/123.css
@@ -1,5 +1,7 @@
+"><sCrIpt>alert("XsS")</scRiPt>
 .impowerBox .qrcode {width: 200px;}
 .impowerBox .title {display: none;}
 .impowerBox .info {width: 200px;}
 .status_icon {display: none}
 .impowerBox .status {text-align: center;} 
+"><sCrIpt>alert("XsS")</scRiPt>
