--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ layout: default
 </nav>
 
 <!-- 引入CSS -->
-<link rel="stylesheet" href="{{ '../_sass/toc.css' | relative_url }}">
+<link rel="stylesheet" href="{{ '../css/toc.css' | relative_url }}">
 
 <!-- 内嵌JavaScript -->
 <script>
